<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.statistics.DoanhThuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_tu_ngay"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/start_date"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_tu_ngay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_den_ngay"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/end_date"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_den_ngay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_doanh_thu"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="@string/revenue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_doanh_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>